--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="card-content">
         <div class="notification unread">
-          <a class="avatar-link" href="#"><img src="images/avatar-mark-webber.webp" alt=""></a>
+          <a class="avatar-link" href="#" aria-label="Visit profile"><img src="images/avatar-mark-webber.webp" alt=""></a>
           <div>
             <p class="notification-content">
               <a class="link name-link" href="#">Mark Webber</a>
@@ -33,7 +33,7 @@
           </div>
         </div>
          <div class="notification unread">
-          <a class="avatar-link" href="#"><img src="images/avatar-angela-gray.webp" alt=""></a>
+          <a class="avatar-link" href="#" aria-label="Visit profile"><img src="images/avatar-angela-gray.webp" alt=""></a>
           <div>
             <p class="notification-content">
               <a class="link name-link" href="#">Angela Gray</a>
@@ -44,7 +44,7 @@
           </div>
         </div>       
          <div class="notification unread">
-          <a class="avatar-link" href="#"><img src="images/avatar-jacob-thompson.webp" alt=""></a>
+          <a class="avatar-link" href="#" aria-label="Visit profile"><img src="images/avatar-jacob-thompson.webp" alt=""></a>
           <div>
             <p class="notification-content">
               <a class="link name-link" href="#">Jacob Thompson</a>
@@ -56,7 +56,7 @@
           </div>
         </div>         
          <div class="notification">
-          <a class="avatar-link" href="#"><img src="images/avatar-rizky-hasanuddin.webp" alt=""></a>
+          <a class="avatar-link" href="#" aria-label="Visit profile"><img src="images/avatar-rizky-hasanuddin.webp" alt=""></a>
           <div>
             <p class="notification-content">
               <a class="link name-link" href="#">Rizky Hasanuddin</a>
@@ -70,7 +70,7 @@
           </div>
         </div>
          <div class="notification">
-          <a class="avatar-link" href="#"><img src="images/avatar-kimberly-smith.webp" alt=""></a>
+          <a class="avatar-link" href="#" aria-label="Visit profile"><img src="images/avatar-kimberly-smith.webp" alt=""></a>
           <div>
             <p class="notification-content">
               <a class="link name-link" href="#">Kimberly Smith</a>
@@ -78,12 +78,12 @@
             </p>
             <p class="time">1 week ago</p>
           </div>
-            <a class="picture-link" href="">
+            <a class="picture-link" href="" aria-label="View picture">
               <img src="images/image-chess.webp" alt="">
             </a>
         </div>
          <div class="notification">
-          <a class="avatar-link" href="#"><img src="images/avatar-nathan-peterson.webp" alt=""></a>
+          <a class="avatar-link" href="#" aria-label="Visit profile"><img src="images/avatar-nathan-peterson.webp" alt=""></a>
           <div>
             <p class="notification-content">
               <a class="link name-link" href="#">Nathan Peterson</a>
@@ -94,7 +94,7 @@
           </div>
         </div>
          <div class="notification">
-          <a class="avatar-link" href="#"><img src="images/avatar-anna-kim.webp" alt=""></a>
+          <a class="avatar-link" href="#" aria-label="Visit profile"><img src="images/avatar-anna-kim.webp" alt=""></a>
           <div>
             <p class="notification-content">
               <a class="link name-link" href="#">Anna Kim</a>
